# baft

./: .gitignore  CONTRIBUTING.md  README.md  go.mod  main.go
.opencode/: AGENTS.md
docs/: check-usage.md  draft-usage.md  help-intro.md  manual.md  spec.md  usage.md
docs/cli-assets/: check-usage.txt  draft-usage.txt  dump-usage.txt  help-intro.txt  integrate-usage.txt  restyle-usage.txt  usage.txt
docs/concepts/: baftignore.md  capsule.md  contract.md  language.md  manifest.md  validation.md
examples/dart/: .gitignore  BAFT.md  STRATA.md  pubspec.yaml
examples/go/: .gitignore
examples/kotlin/: .gitignore  BAFT.md  STRATA.md  build.gradle.kts
examples/rust/: .gitignore  Cargo.toml
examples/rust/src/: BAFT.md  STRATA.md  main.rs
examples/rust/src/auth/: BAFT.md  STRATA.md
examples/rust/src/auth/domain/: error.rs  user.rs
examples/rust/src/auth/service/: jwt.rs
examples/rust/src/billing/: BAFT.md  STRATA.md
examples/rust/src/billing/api/: router.rs
examples/rust/src/billing/domain/: error.rs  mod.rs  order.rs
examples/rust/src/billing/service/: cancel_order.rs  create_order.rs  mod.rs
examples/rust/src/shared/: logger.rs  mod.rs  uuid.rs
examples/typescript/: .gitignore  BAFT.md  STRATA.md  package.json  tsconfig.json
intellij-plugin/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
scripts/: build-plugins.sh
vscode-extension/: .vscodeignore  CONTRIBUTING.md  README.md  baft-0.0.1.vsix  package-lock.json  package.json  strata-0.0.1.vsix  tsconfig.json
(+179 files in other folders)
