[package]
name = "example-monorepo"
version = "1.0.0"
edition = "2021"
description = "A multi-node Rust application demonstrating STRATA.md architecture"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

[workspace]
members = ["crates/cli", "crates/sdk"]
